versions/GNDS-v2.0/GNDS/c/src/v2.0/reduced/Distribution.h


// THIS FILE WAS AUTOGENERATED!
// DO NOT MODIFY!

// Interface for C
// This header file is designed to work with both C and C++
// Function definitions are in this file's .cpp source

// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------
// Instructions for Users
//
// Constructs you're MORE likely to care about are preceded with:
//    // +++ remark
// Constructs you're LESS likely to care about are preceded with:
//    // --- remark
// Anything not marked as above can be ignored by most users.
//
// Distribution is the basic handle type in this file. Example:
//    // Create a default Distribution object:
//    Distribution handle = DistributionDefault();
// Functions involving Distribution are declared throughout this file.
// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------


// -----------------------------------------------------------------------------
// Preliminaries
// -----------------------------------------------------------------------------

#ifndef C_INTERFACE_GNDS_V2_0_REDUCED_DISTRIBUTION
#define C_INTERFACE_GNDS_V2_0_REDUCED_DISTRIBUTION

#include "GNDStk.h"
#include "v2.0/general/ThermalNeutronScatteringLaw.h"
#include "v2.0/general/Uncorrelated.h"
#include "v2.0/general/Unspecified.h"
#include "v2.0/general/XYs2d.h"
#include "v2.0/general/Branching3d.h"

#ifdef __cplusplus
   #define extern_c extern "C"
#else
   #define extern_c
#endif

// Proxy C struct for the handled C++ class
struct DistributionClass { };


// -----------------------------------------------------------------------------
// Handle types
// -----------------------------------------------------------------------------

// +++ Distribution
// +++ General handle, suitable for most users. If you're not concerned about
// +++ strict "const correctness" in your C code, you can probably use this in
// +++ place of any function parameter of a const-aware handle type.
typedef struct DistributionClass *Distribution;

// --- Const-aware handles.
typedef const struct DistributionClass *const ConstHandle2ConstDistribution;
typedef       struct DistributionClass *const ConstHandle2Distribution;
typedef const struct DistributionClass *      Handle2ConstDistribution;
typedef       struct DistributionClass *      Handle2Distribution;


// -----------------------------------------------------------------------------
// Basics
// Create, Assign, Delete
// -----------------------------------------------------------------------------

// --- Create, default, const
extern_c Handle2ConstDistribution
DistributionDefaultConst();

// +++ Create, default
extern_c Handle2Distribution
DistributionDefault();

// --- Create, general, const
extern_c Handle2ConstDistribution
DistributionCreateConst(
   ConstHandle2ConstThermalNeutronScatteringLaw thermalNeutronScatteringLaw,
   ConstHandle2ConstUncorrelated uncorrelated,
   ConstHandle2ConstUnspecified unspecified,
   ConstHandle2ConstXYs2d XYs2d,
   ConstHandle2ConstBranching3d branching3d
);

// +++ Create, general
extern_c Handle2Distribution
DistributionCreate(
   ConstHandle2ConstThermalNeutronScatteringLaw thermalNeutronScatteringLaw,
   ConstHandle2ConstUncorrelated uncorrelated,
   ConstHandle2ConstUnspecified unspecified,
   ConstHandle2ConstXYs2d XYs2d,
   ConstHandle2ConstBranching3d branching3d
);

// +++ Assign
// +++ Use this to assign one handled object to another. Don't assign handles,
// +++ as with to = from. That has a meaning that you probably don't intend.
extern_c void
DistributionAssign(ConstHandle2Distribution self, ConstHandle2ConstDistribution from);

// +++ Delete
// +++ We'll attempt to remove no-longer-used objects automatically, but you
// +++ may improve performance if you delete them when you're done with them.
extern_c void
DistributionDelete(ConstHandle2ConstDistribution self);


// -----------------------------------------------------------------------------
// I/O
// Read, Write, Print
// Each returns 0 if failure, 1 if success.
// -----------------------------------------------------------------------------

// +++ Read from file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll examine the file's contents to determine its type automatically.
extern_c int
DistributionRead(ConstHandle2Distribution self, const char *const filename);

// +++ Write to file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll use filename's extension to determine the type you want written.
extern_c int
DistributionWrite(ConstHandle2ConstDistribution self, const char *const filename);

// +++ Print to standard output, in our prettyprinting format
extern_c int
DistributionPrint(ConstHandle2ConstDistribution self);

// +++ Print to standard output, as XML
extern_c int
DistributionPrintXML(ConstHandle2ConstDistribution self);

// +++ Print to standard output, as JSON
extern_c int
DistributionPrintJSON(ConstHandle2ConstDistribution self);


// -----------------------------------------------------------------------------
// Child: thermalNeutronScatteringLaw
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
DistributionThermalNeutronScatteringLawHas(ConstHandle2ConstDistribution self);

// --- Get, const
extern_c Handle2ConstThermalNeutronScatteringLaw
DistributionThermalNeutronScatteringLawGetConst(ConstHandle2ConstDistribution self);

// +++ Get
extern_c Handle2ThermalNeutronScatteringLaw
DistributionThermalNeutronScatteringLawGet(ConstHandle2Distribution self);

// +++ Set
extern_c void
DistributionThermalNeutronScatteringLawSet(ConstHandle2Distribution self, ConstHandle2ConstThermalNeutronScatteringLaw thermalNeutronScatteringLaw);


// -----------------------------------------------------------------------------
// Child: uncorrelated
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
DistributionUncorrelatedHas(ConstHandle2ConstDistribution self);

// --- Get, const
extern_c Handle2ConstUncorrelated
DistributionUncorrelatedGetConst(ConstHandle2ConstDistribution self);

// +++ Get
extern_c Handle2Uncorrelated
DistributionUncorrelatedGet(ConstHandle2Distribution self);

// +++ Set
extern_c void
DistributionUncorrelatedSet(ConstHandle2Distribution self, ConstHandle2ConstUncorrelated uncorrelated);


// -----------------------------------------------------------------------------
// Child: unspecified
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
DistributionUnspecifiedHas(ConstHandle2ConstDistribution self);

// --- Get, const
extern_c Handle2ConstUnspecified
DistributionUnspecifiedGetConst(ConstHandle2ConstDistribution self);

// +++ Get
extern_c Handle2Unspecified
DistributionUnspecifiedGet(ConstHandle2Distribution self);

// +++ Set
extern_c void
DistributionUnspecifiedSet(ConstHandle2Distribution self, ConstHandle2ConstUnspecified unspecified);


// -----------------------------------------------------------------------------
// Child: XYs2d
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
DistributionXYs2dHas(ConstHandle2ConstDistribution self);

// --- Get, const
extern_c Handle2ConstXYs2d
DistributionXYs2dGetConst(ConstHandle2ConstDistribution self);

// +++ Get
extern_c Handle2XYs2d
DistributionXYs2dGet(ConstHandle2Distribution self);

// +++ Set
extern_c void
DistributionXYs2dSet(ConstHandle2Distribution self, ConstHandle2ConstXYs2d XYs2d);


// -----------------------------------------------------------------------------
// Child: branching3d
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
DistributionBranching3dHas(ConstHandle2ConstDistribution self);

// --- Get, const
extern_c Handle2ConstBranching3d
DistributionBranching3dGetConst(ConstHandle2ConstDistribution self);

// +++ Get
extern_c Handle2Branching3d
DistributionBranching3dGet(ConstHandle2Distribution self);

// +++ Set
extern_c void
DistributionBranching3dSet(ConstHandle2Distribution self, ConstHandle2ConstBranching3d branching3d);


// -----------------------------------------------------------------------------
// Custom functionality
// -----------------------------------------------------------------------------

#include "v2.0/reduced/Distribution/src/custom.h"

#undef extern_c
#endif